--- a/api/package.json
+++ b/api/package.json
@@ -1,14 +1,14 @@
 {
   "name": "api",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
+  "main": "app.js",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ."
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "morgan": "~1.9.1"
+    "express": "~4.16.1"
   }
 }
