--- a/api/package.json
+++ b/api/package.json
@@ -2,13 +2,23 @@
   "name": "api",
   "version": "0.0.1",
   "private": true,
-  "main": "app.js",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "node ."
+    "start": "node .",
+    "tsc": "tsc",
+    "prepare": "rm -fr ./dist",
+    "build": "npm run prepare && npm run tsc"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "express": "~4.16.1"
+    "express": "^4.18.2",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.18",
+    "@types/morgan": "^1.9.6",
+    "@types/node": "^20.8.0",
+    "typescript": "^5.2.2"
   }
 }
