--- a/api/package.json
+++ b/api/package.json
@@ -5,6 +5,7 @@
   "main": "dist/app.js",
   "scripts": {
     "start": "node .",
+    "start:dev": "nodemon",
     "tsc": "tsc",
     "prepare": "rm -fr ./dist",
     "build": "npm run prepare && npm run tsc"
@@ -19,6 +20,8 @@
     "@types/express": "^4.17.18",
     "@types/morgan": "^1.9.6",
     "@types/node": "^20.8.0",
+    "nodemon": "^3.0.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
