--- a/api/package.json
+++ b/api/package.json
@@ -11,19 +11,27 @@
     "build": "npm run prepare && npm run tsc"
   },
   "dependencies": {
+    "@google-cloud/vision": "^4.0.2",
+    "@tensorflow/tfjs-node": "^4.11.0",
+    "canvas": "^2.11.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.1",
+    "face-api.js": "^0.22.2",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.18",
+    "@types/express-fileupload": "^1.4.2",
     "@types/jsonwebtoken": "^9.0.3",
     "@types/morgan": "^1.9.6",
     "@types/node": "^20.8.0",
+    "@types/uuid": "^9.0.4",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
