--- a/api/package.json
+++ b/api/package.json
@@ -15,6 +15,7 @@
     "@tensorflow/tfjs-node": "^4.11.0",
     "canvas": "^2.11.2",
     "cookie-parser": "~1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -25,6 +26,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.14",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.18",
     "@types/express-fileupload": "^1.4.2",
